--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1 style="text-align:center;">به نام خدا</h1>
 <pre style="text-align:center;">
 انگیزه نامه
-میرمحمد کمالی
-متولد ۱۳۷۸/۰۱/۲۱
+مینا قاسمی
+متولد 1377/11/26
 </pre>
 
 <hr>
@@ -40,7 +40,7 @@ Without hustle, talent will only carry you so far :
 بدون تلاش و پیشرفت، شما فقط استعداد را تا به امروز با خودتان به این طرف و آن طرف جابجا کرده‌اید
 
 . بنده شخصیتی صبور و کوشش گر هستم و برای رسیدن به حتی کوچک ترین هدفم تلاش لازم را انجام میدهم
-. کمک به دیگران از جمله دوستان و آشنایان یکی ازجمله در مباحث درسی بسیار باعث خوشنودی بنده میشود 
+ 
 
 * با تشکر از استاد عزیز گرانقدر جناب آقای دکتر سید علی رضوی ابراهیمی *
 </pre>
