--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <hr>
 
 <h2 style="text-align:center;">اهداف و انگیزه</h2>
-<p style="text-align:center;"> . مهم ترین هدف بنده استفاده از تمام توان برای تبدیل شدن به یک برنامه نویس بدون نقص است
+<p style="text-align:center;"> . هدف من از تحصیل در رشته مهندسی کامپیوتر پاد گرفتن برنامه نویسی است
 
 <hr>
 
 <h3 style="text-align:center;">تجربه های گذشته</h3>
-<p style="text-align:center;"> c++ , java , android , html , css : برنامه نویسی به زبان های  <p>
+<p style="text-align:center;"> تجربه ای کسب نکرده ام
 
 <hr>
 
 <h4 style="text-align:center;">برنامه</h4>
-  <pre style="text-align:center;"> . علت تحصیل بنده در دانشگاه پیام نور رعایت سیستم آموزشی بین المللی و سطح بالای آن نسبت به دانشگاه های هم جوار است  
-  . برنامه ی من برای آینده رسیدن به درجه ی علمی مناسب و اشتغال در زمینه ی تحصیلی خود است  
+  <pre style="text-align:center;"> . علت تحصیل بنده در دانشگاه پیام نور    
+  . اشتغال در زمینه ی تحصیلی خود است  
   . قصد دارم با تلاش و کوشش فراوان به درجات بالایی برسم  </pre>
 
 <hr>
@@ -37,7 +37,6 @@
 <h5 style="text-align:center;">شخصیت</h5>
 <pre style="text-align:center;">
 Without hustle, talent will only carry you so far :
-بدون تلاش و پیشرفت، شما فقط استعداد را تا به امروز با خودتان به این طرف و آن طرف جابجا کرده‌اید
 
 . بنده شخصیتی صبور و کوشش گر هستم و برای رسیدن به حتی کوچک ترین هدفم تلاش لازم را انجام میدهم
  
