--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <hr>
 
 <h2 style="text-align:center;">اهداف و انگیزه</h2>
-<p style="text-align:center;"> . هدف من از تحصیل در رشته مهندسی کامپیوتر پاد گرفتن برنامه نویسی است
+<p style="text-align:center;"> . هدف من از تحصیل در رشته مهندسی کامپیوتر یاد گرفتن برنامه نویسی است
 
 <hr>
 
@@ -36,10 +36,9 @@
 
 <h5 style="text-align:center;">شخصیت</h5>
 <pre style="text-align:center;">
-Without hustle, talent will only carry you so far :
 
-. بنده شخصیتی صبور و کوشش گر هستم و برای رسیدن به حتی کوچک ترین هدفم تلاش لازم را انجام میدهم
- 
+
+. برای رسیدن به هدف خود از هیچ تلاشی فرو گذاری نخواهم کرد
 
 * با تشکر از استاد عزیز گرانقدر جناب آقای دکتر سید علی رضوی ابراهیمی *
 </pre>
